[gd_scene load_steps=5 format=2]

[ext_resource path="res://hit1.wav" type="AudioStream" id=1]
[ext_resource path="res://Fighter.gd" type="Script" id=2]
[ext_resource path="res://hit2.wav" type="AudioStream" id=3]
[ext_resource path="res://grab.wav" type="AudioStream" id=4]

[node name="Fighter" type="KinematicBody2D" groups=[
"entities",
]]
z_index = 1
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Body Collider" type="CollisionShape2D" parent="."]

[node name="Sprite" type="Sprite" parent="."]
z_index = 1
hframes = 38
frame = 8

[node name="blast_spawn" type="Position2D" parent="Sprite"]

[node name="HitBox" type="Area2D" parent="Sprite" groups=[
"hitboxes",
]]
collision_layer = 0
collision_mask = 0

[node name="HitBoxCol" type="CollisionShape2D" parent="Sprite/HitBox"]

[node name="HitCol" type="Area2D" parent="Sprite" groups=[
"attacks",
]]
collision_layer = 0
collision_mask = 0

[node name="HitCollider" type="CollisionShape2D" parent="Sprite/HitCol" groups=[
"attacks",
]]

[node name="InRangeCol" type="Area2D" parent="Sprite"]
position = Vector2( 85, 0 )
collision_layer = 0
collision_mask = 0

[node name="InRangeCollider" type="CollisionShape2D" parent="Sprite/InRangeCol"]

[node name="GrappleCol" type="Area2D" parent="Sprite" groups=[
"grapples",
]]
collision_layer = 0
collision_mask = 0

[node name="GrappleCollider" type="CollisionShape2D" parent="Sprite/GrappleCol" groups=[
"grapples",
]]

[node name="Shadow" type="Sprite" parent="."]

[node name="Overlay" type="Sprite" parent="."]
z_index = 2

[node name="Hit1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )

[node name="Hit2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="grab_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
[connection signal="area_entered" from="Sprite/HitBox" to="." method="_on_HitBox_area_entered"]
